[bq] refactoring & dependency upgrade